@@ -4,6 +4,7 @@ BUG: Ticket#621 - TWizardNavigationButtonStyle could not be found (Qiang)
 BUG: Ticket#627 - Logout did not set correct status to the user object (Qiang)
 BUG: Ticket#650 - Fixed TMysqlMetaData bug about SHOW FULL TABLES (Qiang)
 BUG: TWizard Sidebar using TDataListItemRenderer has error (Qiang)
+ENH: Ticket#625 - Added @ to represent authenticated users in auth rules (Qiang)
 ENH: Ticket#631 - Make TQueue implement Countable as the other collection classes (Knut)
 ENH: Ticket#634 - Override __toString for TXmlElement and TXmlDocument (Knut)
 ENH: Ticket#639 - Added setters for certain properties of TTheme (Qiang)
